Alterando nome de usuario

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="loading-screen">
   <div class="loading-content">
-    <h2></h2>
+    <h2>Ola, Pessoa!</h2>
     <p>Muito obrigado pela oportunidade.<br>
     Este portfólio foi preparado especialmente para você, para que possa me conhecer melhor e de uma maneira mais organizada 😉</p><br>
     
