Modificando textos no "caio"

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><i class="fas fa-chevron-right"></i> Estagiario em Analytics e Orçamento - RH</li>
             <li><i class="fas fa-chevron-right"></i> Efetivação na area de operações de RH</li>
             <li><i class="fas fa-chevron-right"></i> Experiência como auxiliar de produção</li>
-            <li><i class="fas fa-chevron-right"></i> Desenvolvendo um projeto pessoal "CAIO", o chatbot inteligente para suportes internos corporativo em HTML,CSS,JS,Python</li>
+            <li><i class="fas fa-chevron-right"></i> Desenvolvendo um projeto pessoal "CAIO", o chatbot inteligente para suportes corporativo em HTML,CSS,JS,Python</li>
             <li><i class="fas fa-chevron-right"></i> Desenvolvimento de dashboards interativos no Power BI com DAX</li>
             <li><i class="fas fa-chevron-right"></i> Leitor inteligente de PDFs desenvolvido em Python</li>
             <li><i class="fas fa-chevron-right"></i> Auxiliar em tecnologia para idosos em Java - Challenge </li>
@@ -93,7 +93,7 @@
           <i class="fas fa-robot"></i>
         </div>
         <h3>CAIO - Chatbot Inteligente</h3>
-        <p>Solução de automação para suporte interno, reduzindo tempo de resposta.</p>
+        <p>Solução de automação para suportes, reduzindo tempo de resposta.</p>
         <div class="tech-tags">
           <span class="tag">Automação</span>
         </div>
