--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li><i class="fas fa-chevron-right"></i> Estagiario em Analytics e Orçamento - RH</li>
             <li><i class="fas fa-chevron-right"></i> Efetivação na area de operações de RH</li>
             <li><i class="fas fa-chevron-right"></i> Experiência como auxiliar de produção</li>
-            <li><i class="fas fa-chevron-right"></i> Desenvolvendo um projeto pessoal "CAIO", o chatbot inteligente para suportes corporativo em HTML,CSS,JS,Python</li>
+            <li><i class="fas fa-chevron-right"></i> Desenvolvendo um projeto pessoal "CAIO", o chatbot inteligente para suportes em HTML,CSS,JS,Python</li>
             <li><i class="fas fa-chevron-right"></i> Desenvolvimento de dashboards interativos no Power BI com DAX</li>
             <li><i class="fas fa-chevron-right"></i> Leitor inteligente de PDFs desenvolvido em Python</li>
             <li><i class="fas fa-chevron-right"></i> Auxiliar em tecnologia para idosos em Java - Challenge </li>
